--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,36 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
         <link rel="shortcut icon" href="./4geeks.ico"></head>
     <body>
-        <div class="container-fluid text-center">
-            <h1 class="mt-5">Hello Rigo!</h1>
-            <img src="./rigo-baby.jpg"></img>
-            <p class="alert alert-warning mt-4">If this text is <b>not</b> centered and <b>yellow</b>, you probably have an error</p>
-            <div class="fixed-bottom p-4">
-                Made with ❤️ by <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-            </div>
-        </div>
+       <div class="mx-auto text-center col-12">
+            <h1 id="elephant">Example Page</h1>
+       </div>
+
+       <ol>
+       <li><a target="_blank" href="facebook.com">Cats</a></li>
+       <li><a target="_blank" href="youtube.com">Dogs</a></li>
+       <li><a target="_blank" href="google.com">Parrots</a></li>
+       </ol>
+
+       <ul>
+       <li>Apple</li>
+       <li>Grape</li>
+       <li>Peaches</li>
+       </ul>
+
+<ol>
+<li>Star Wars</li>
+<li>Avengers</li>
+<li>Frozen</li>
+</ol>
 
 
+
+<h5>A <i>NEW </i>HOPE </h5>
+
+<br/>
+<br/>
+<br/>
+<li><a  href="#elephant">Click me to go to the top</a></li>    
         <!-- do not remove this bundle.js tag -->
         <script type="text/javascript" src="./bundle.js"></script></body>
 </html>
